# ros-kinect-roboticarm

./: LICENSE  README.md  move_group_interface.cpp  notizen.docx
Kognitive Systeme Vortrag/: Ethics in AI.pptx
Vorlage - Guidelines Abschlussarbeiten/: SN74x6541.vhd  Thesis.aux  Thesis.bbl  Thesis.bcf  Thesis.blg  Thesis.idx  Thesis.ilg  Thesis.ind  Thesis.lof  Thesis.lol  Thesis.lot  Thesis.run.xml  Thesis.tcp  Thesis.tex  Thesis.toc  Thesis.tps  bibstyle.bst  indexstyle.ist  results.tex
Vorlage - Guidelines Abschlussarbeiten/bibliography/: bibliography.bib  bibliography.bib.bak  bibliography.blg
Vorlage - Guidelines Abschlussarbeiten/images/: Thumbs.db
Vorlage - Guidelines Abschlussarbeiten/source/: abstract.aux  abstract.tex  appendix.aux  appendix.tex  basics.aux  basics.blg  basics.tex  basicsMA.aux  basicsMA.tex  confirmation.aux  confirmation.tex  directories.aux  directories.tex  discussion.aux  discussion.tex  introduction.aux  introduction.tex  methods.aux  methods.tex  results.aux  results.tex  titlepage.aux  titlepage.tex
Vortrag/: Bachelor_Zeitplan.xlsx  Das Attentat.pptx  OrdnerStrukturCatkinWorkspace.pptx  Präsentation Variante a.ppt  Präsentation Variante a.pptx
learning_tf2/: CMakeLists.txt  package.xml
roboticarm_gesture_control/: .cproject  move_group_interface.cpp
roboticarm_gesture_control_extended/: .project  CMakeLists.txt  package.xml
turtlesim_gesture_control/: CMakeLists.txt  README.txt  package.xml
turtlesim_gesture_control/launch/: start_demo.launch
turtlesim_gesture_control/src/: gesture_control.cpp
(+13 files in other folders)
